resolved enter button sizing and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body {
 }
 
 .enter-button{
-    width: 20% !important;
+    width: 100%;
     height: 100%;
 }
 
@@ -46,12 +46,12 @@ body {
     .user-input-number {
         height: auto;
         font-size: 16px;
-        width: 100%;
+        /* width: 100%; */
         padding: 10px;
     }
     .enter-button{
         margin: auto;
-        width: 100% !important;
+        /* width: 100% !important; */
     }
     .background-container {
         border-radius: 10px;
